--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "jspdf": "^3.0.3",
-    "@google/genai": "^1.29.0"
+    "@google/genai": "^1.29.0",
+    "jspdf": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
