--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "*",
-      "use": "@vercel/static"
-    }
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
